<resources>
    <string name="app_name">Lea</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="date">date</string>
    <string name="name">name</string>
    <string name="my_exams">My Exams</string>
    <string name="title_activity_exam_detail">ExamDetailActivity</string>
    <string name="questionText">questionText</string>
    <string name="action_remember">Remember Exam</string>
    <string name="studyName">studyName</string>
    <string name="addQuestion">Add question here...</string>
    <string name="saveQuestionToast">Question submitted</string>
    <string name="questionTextEmptyToast">\"Please write your question\"</string>
    <string name="title_activity_question_detail">Question</string>
    <string name="answerTextEmpty">Empty answer</string>
    <string name="answerSaved">Answer added</string>

</resources>
